# SpinQuant

./: convert_pt_to_hf.py  convert_pt_to_hf_test.py  gptq.py  optimize_rotation.py  ptq.py  pyproject.toml  rotate_and_save.py
eval_utils/: main.py  rotation_utils.py
train_utils/: main.py
utils/: process_args.py  quant_utils.py  utils.py
